Update the Groovy plug-in to 3.0.0-beta-2
#925